--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,13 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 
-
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+bun.lock
+.vscode/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
