--- a/package.json
+++ b/package.json
@@ -9,35 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/mdx": "^15.3.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@types/mdx": "^2.0.13",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^14.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.525.0",
-    "next": "^15.4.1",
-    "next-intl": "^4.3.4",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
+    "next-intl": "^3.3.2",
     "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rss": "^1.2.2",
-    "tailwind-merge": "^3.3.1",
-    "tree-cli": "^0.6.7"
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24.0.13",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
-    "eslint": "^9",
-    "eslint-config-next": "^15.4.1",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.5",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
