--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^14.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-spring/web": "^10.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "gray-matter": "^4.0.3",
@@ -24,7 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rss": "^1.2.2",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
